--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src/",
     "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
-    "lint": "eslint src/"
+    "build": "webpack --mode production"
   },
   "husky": {
-  "hooks": {
-    "pre-commit": "lint-staged"
-  }
-},
-"lint-staged": {
-  "src/**/*.js": "eslint"
-},
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.js": "eslint"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
