--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,15 @@
 {
   "env": {
-    "es6": true,
-    "browser": true,
-    "node": true
+     "es6": true,
+     "browser": true,
+     "node": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true
+        "jsx": true
     }
   },
   "settings": {
@@ -28,9 +28,7 @@
     "indent": [
       "error",
       2,
-      {
-        "SwitchCase": 1
-      }
+      {"SwitchCase": 1}
     ],
     "linebreak-style": [
       "error",
@@ -39,9 +37,7 @@
     "quotes": [
       "error",
       "single",
-      {
-        "allowTemplateLiterals": true
-      }
+      {"allowTemplateLiterals": true}
     ],
     "semi": [
       "error",
